backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vagon-backend-service
spec:
  selector:
    app: vagon-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
