ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vagon-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Use "letsencrypt" for production
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - metahaven-ua.org
      secretName: metahaven-ua-tls-secret  # Secret to store the TLS certificate
  rules:
    - host: metahaven-ua.org
      http:
        paths:
          - path: /create-checkout-session(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vagon-backend-service
                port:
                  number: 80
          - path: /api/streams(/|$)(.*) 
            pathType: Prefix
            backend:
              service:
                name: vagon-backend-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
